<resources>
    <string name="app_name">TodoApp</string>

    <string name="facebook_app_id" translatable="false">967177360580441</string>
    <string name="facebook_client_token" translatable="false">fb967177360580441</string>
    <!-- related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="appSharedPreferences_id">9817570512352</string>
    <string name="defaultAuthExpireTimeMillis">604800000</string>

    <string name="univ_ok">확인</string>
    <string name="univ_cancel">취소</string>
    <!-- sign up-->
    <string name="signUp_pageTitle">회원가입</string>
    <string name="signUp_userName">이름</string>
    <string name="signUp_actionSendEmail">인증번호 발송</string>
    <string name="signUp_emailInputCaution">인증번호 전송을 위해 정확인 이메일 주소를 입력해주세요.</string>
    <string name="signUp_certificationNumber">인증번호</string>
    <string name="signUp_password">비밀번호(8자 이상, 한글/영문/숫자/특수문자 사용 가능)</string>
    <string name="signUp_passwordConfirm">비밀번호 확인</string>
    <string name="signUp_emailAddress">이메일 주소</string>
    <string name="signUp_servicePolicyNeeds">회원가입을 위해 서비스 정책에 대한 회원님의 동의가 필요합니다.</string>
    <string name="signUp_servicePolicy">서비스 정책</string>
    <string name="signUp_serviceTermsAndConditionsAgreement">서비스 이용약관에 동의합니다.</string>
    <string name="signUp_privacyPolicyAgreement">개인정보 처리방침에 동의합니다.</string>
    <string name="signUp_marketingSubscriptionAgreement">마케팅 수신 동의 약관에 동의합니다.</string>
    <string name="signUp_allPolicyAgreement">모든 이용약관을 확인하였으며, 이에 동의합니다.</string>
    <string name="signUp_actionSeefullDocument">전문보기</string>
    <string name="signUp_emailHint">example@todo.com</string>
    <string name="signUp_formValid"> - 적합한 형식입니다.</string>
    <string name="signUp_formInvalid"> - 부적합한 형식입니다.</string>
    <string name="signUp_emailRegexPattern"><![CDATA[
    ^(?=.{3,20}@)[A-Za-z0-9_-]+(\\.[A-Za-z0-9_-]+)*@[A-Za-z0-9]{2,20}+(\\.[A-Za-z0-9-]{2,10})(\\.[A-Za-z]{2,10})*$
]]></string>
    <string name="signUp_emailRegexPattern2"><![CDATA[
    ^(?=.{1,64}@)([A-Za-z0-9_-]+(\\.[A-Za-z0-9_-]+)*)@[A-Za-z0-9-]+(\\.[A-Za-z0-9-]+)*(\\.[A-Za-z]+)+(?<=@.{1,255})$
]]></string>
    <string name="signUp_emailFormDesc">
        이메일 형식 :
        \n 예시 : example@todo.co.kr
        \n example 부분 :
        \n •3자 이상 20자 이하
        \n •[-_.]을 제외한 특수문자 및 화이트스페이스 불가
        \n •연속된 [.] 또는 문자 맨 앞이나 맨 뒤의 [.] 불가
        \n todo 부분 : 2자 이상 20자 이하
        \n co 부분 : 2자 이상 10자 이하
        \n kr 부분 : 2자 이상 10자 이하
    </string>
    <string name="signUp_passwordMatch"> - 비밀번호가 일치합니다.</string>
    <string name="signUp_passwordNotMatch"> - 비밀번호가 일치하지 않습니다.</string>
    <string name="signUp_passwordForm"> - 8자 이상 20자 이하의 비밀번호를 입력해주세요.</string>
    <string name="signUp_passwordInvalid"> - 사용 불가능한 특수문자가 입력되었습니다.</string>
    <string name="signUp_passwordTooShort"> - 8자 미만의 비밀번호입니다.</string>
    <string name="signUp_passwordTooLong"> - 20자가 초과된 비밀번호입니다.</string>
    <string name="signUp_passwordFine">비밀번호 안정성 : 더 강력하면 좋겠지만, 괜찮아요. 🤔</string>
    <string name="signUp_passwordGood">비밀번호 안정성 : 적정합니다. 🤓</string>
    <string name="signUp_passwordNice">비밀번호 안정성 : 강력합니다. 😍</string>
    <string name="signUp_passwordRegexPattern"><![CDATA[
        ^[ㄱ-ㅎ가-힣a-zA-Z0-9!~@#$%\\^&/♡☆*_+\\.\\,:;+=×÷>?<()\\-]{1,}$
        ]]>
    </string>
    <string name="signUp_regexSpecialCharacterContained"><![CDATA[
           ^(?:.*[!~@#$%\^&*_+\-].*)+$
        ]]>
    </string>
    <string name="signUp_passwordFormDesc">
        비밀번호 형식 :
        \n •8자 이상 20자 이하
        \n •숫자, 영소문자, 영대문자, 특수문자[@#$%] 각 하나 이상 포함
    </string>
    <string name="signUp_agreeRequired">[필수]</string>
    <string name="signUp_agreeOptional">[선택]</string>
    <string name="signUp_duplicateEmail">이미 존재하는 이메일입니다. 다른 이메일로 시도해주세요.</string>
    <string name="signUp_alreadyExistEmail">이미 회원가입된 이메일입니다. 다시 시도해주세요.</string>
    <string name="signUp_requestFail">데이터 전송에 실패했습니다. 다시 시도해주세요.</string>
    <string name="signUp_signUpRequestFail">오류가 발생했습니다. 다시 시도해주세요.</string>
    <string name="signUpSuccess_welcomeMessagePrefix">이제</string>
    <string name="signUpSuccess_welcomeMessageSuffix">가 일상을 함께합니다!</string>
    <string name="signUpSuccess_successMessage">회원가입 완료!</string>
    <string name="signUp_nameSizeOver">이름은 10자 이내로 설정해주세요.</string>
    <string name="signUp_nameSizeEmpty">이름을 설정해주세요.</string>
    <string name="signUp_certificationCodeExpired">인증번호의 유효기간이 만료되었습니다. 다시 시도해주세요.</string>
    <string name="signUp_certificationCodeRequired">해당 이메일로 발송된 인증번호를 입력해주세요,</string>

    <!--sign in-->
    <string name="signIn_signInValueNotMatch">이메일 또는 비밀번호를 확인해주세요.</string>
    <string name="signIn_actionSignUpWithKakao">Kakao</string>
    <string name="signIn_actionSignUpWithFacebook">Facebook</string>

    <!--main-->
    <string name="main_logoutText">logout</string>
</resources>